# solo

./: .gitignore  AGENTS.md  Changelog.md  SPEC.md  pyproject.toml
scripts/: install_dependencies.py  install_dependencies.sh
solo/: __init__.py  app.py  cli.py  codex_hook.py  editor.py  errors.py  events.py  git.py  init.py  models.py  project.py  proxy.py  runner.py  simple_server.py  store.py  ui.py  workflow.py
solo/static/: app.js  styles.css
solo/templates/: index.html
tests/: test_codex_hooks.py  test_editor.py  test_install_dependencies.py  test_projects.py  test_proxy.py  test_runner.py  test_ui.py  test_workflow.py
